# mango

./: .gitignore  .readthedocs.yaml  README.md  dev_notes.md  development.md  index.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tuner.py
MetaTuner_Examples/: MetaTuner_Comparisons_Iris_Dataset.ipynb  MetaTuner_Parallel_1.ipynb  MetaTuner_Testing-1.ipynb  MetaTuner_bcancer_serial.ipynb  MetaTuner_functions_serial.ipynb  MetaTuner_iris_parallel.ipynb  MetaTuner_iris_serial.ipynb  MetaTuner_wine_serial.ipynb  Tuner_Wine_Serial.ipynb  Tuner_bcancer_serial.ipynb  Tuner_functions_Parallel.ipynb  Tuner_functions_serial.ipynb  Tuner_iris_parallel.ipynb  Tuner_iris_serial.ipynb
benchmarking/: 1D_Mango_Visualizations.ipynb  Convex_Function_1D_HyperOpt.ipynb  Convex_Function_1D_Random.ipynb  Convex_Function_Uniform_1D_Serial.ipynb  Final_Brann_Benchmark_All_Plots.ipynb  Final_Camel_Batch_Mango_Clustering.ipynb  Final_Camel_Random.ipynb  Final_Convex_Function_1D_HyperOpt.ipynb  Final_Convex_Function_Uniform_1D_Parallel_Mango_Working.ipynb  Final_Convex_Function_Uniform_1D_Serial_Mango_Plots.ipynb  Final_SVM_Parallel_Mango_working.ipynb  Final_XGBoost_Parallel_Mango.ipynb  Final_XGBoost_Random.ipynb  Final_XGBoost_Serial_Mango.ipynb  Hyperopt bitfarm.ipynb  Parameter_Spaces_Evaluated.ipynb
classifiers/: CeleryTasks.py  prophet.py  xgboosttree.py
dask/: knn_robust.py  knn_simple.py
docs/: about.md  index.md  requirements.txt
domain/: distribution.py  domain_space.py
examples/: 16_Testing_Tuner_KNN.ipynb  16_Testing_Tuner_UserObjective.ipynb  16_Testing_Tuner_XGBoost.ipynb  19_KNN_Celery.ipynb  19_KNN_Objective.ipynb  19_Prophet_Objective.ipynb  19_Simple_Objective.ipynb  (+31 more)
(+825 files in other folders)
