[tool.poetry]
name = "arm-mango"
version = "1.5.0"
description = "parallel bayesian optimization over complex search spaces"
authors = ["Sandeep Singh Sandha <sandha.iitr@gmail.com>", "Mohit Aggarwal <mohitagg@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ARM-software/mango"
repository = "https://github.com/ARM-software/mango"
packages = [
        { include = "mango" }
]
classifiers = [
        "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.17.0"
scipy = ">=1.4.1"
scikit_learn = ">=0.21.3"
tqdm = ">=4.36.1"
attrdict = ">=2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^7.4.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
